server/openapi: add DPI & add tests for emulated movement
